--- a/AquaFlow.API/appsettings.Development.json
+++ b/AquaFlow.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "defaultConnection": "Server=localhost;Database=AquaFlow;TrustServerCertificate=True;Trusted_Connection=True"
   }
 }
