--- a/AquaFlow.API/appsettings.json
+++ b/AquaFlow.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AquaFlow;TrustServerCertificate=True;Trusted_Connection=True"
+    "defaultConnection": "Server=localhost;Database=AquaFlow;TrustServerCertificate=True;Trusted_Connection=True"
   },
   "AllowedHosts": "*"
 }
