--- a/AquaFlow.API/AquaFlow.API.csproj
+++ b/AquaFlow.API/AquaFlow.API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\AquaFlow.Domain\AquaFlow.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
